ingress-lab/solution/echo-service.solution.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo-sound
spec:
  type: NodePort
  selector:
    app: echo
  ports:
  - port: 8080
    targetPort: 5678
    protocol: TCP
